--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,1 +1,20 @@
-<p>landing works!</p>
+<div class="container">
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12">
+          <div class="jumbotron jum mt-5">
+           <h3 class="text-center h1">WHERE THE WORLD MEETS GITHUB</h3>
+          </div>
+          <div id="git" class="icon">
+              <i class="fab fa-github fa-7x" ></i>
+          </div>
+  
+      </div>
+  
+      <div class="col-lg-12 col-md-12 col-sm-12 but">
+      <div id="but">
+      <button type="button" class="btn btn-warning  btn-lg" ><a routerLink='/searchForm'><strong>GET STARTED WITH GITHUB</strong></a></button>
+      </div>
+      </div>
+  
+    </div>
+  </div>
