--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
     <div class="container">
       <div class="row align-items-centre">
         <div class="col-6 mx-auto col-md-6">
-          <img class="img-fluid mb-3 mb-md-0" src="assets/images/gitlogo.png" alt="github logo" height="800" width="512">
+          <img class="img-fluid mb-3 mb-md-0" src="" alt="github logo" height="800" width="512">
         </div>
         <div class="col-md-6 text-centre text-md-centre">
           <h1>Your gateway to Github</h1>
