--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,11 +4,11 @@
   }
   
   #jumbobanner {
-    background-image: url("https://images.pexels.com/photos/169573/pexels-photo-169573.jpeg?auto=format%2Ccompress&cs=tinysrgb&dpr=2&h=650&w=940");
+    background-image: url("https://images.pexels.com/photos/1181675/pexels-photo-1181675.jpeg?cs=srgb&dl=pexels-christina-morillo-1181675.jpg&fm=jpg");
     background-repeat: no-repeat;
     background-size: cover;
     height: 512px;
-  }
+  }   
   
   hr {
     background-color: #086918;
