--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,9 +9,9 @@
           <img class="img-fluid mb-3 mb-md-0" src="" alt="github logo" height="800" width="512">
         </div>
         <div class="col-md-6 text-centre text-md-centre">
-          <h1>Your gateway to Github</h1>
+          <h1>Find your way to Github</h1>
           <hr>
-          <h3 class="text-secondary">"Github on a Microwave"</h3>
+          <h3 class="text-secondary">"Github Search"</h3>
           <p class="lead">Search for your favourite github user by their name to see their profiles and public repositories</p>
           <p class="lead">You can also search for any project repositories</p>
         </div>
